force-app/main/default/objects/Sprint__c/fields/Completed_Story_Points__c.field-meta.xml
<CustomField>
    <fullName>Completed_Story_Points__c</fullName>
    <description>Story points completed in this sprint</description>
    <label>Completed Story Points</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>