force-app/main/default/objects/Sprint__c/fields/Days_Remaining__c.field-meta.xml
<CustomField>
    <fullName>Days_Remaining__c</fullName>
    <description>Formula: Days remaining until sprint end date</description>
    <label>Days Remaining</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
    <formula>End_Date__c - TODAY()</formula>
</CustomField>