force-app/main/default/objects/Sprint__c/fields/Retrospective_Notes__c.field-meta.xml
<CustomField>
    <fullName>Retrospective_Notes__c</fullName>
    <description>Lessons learned and retrospective notes</description>
    <label>Retrospective Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>