force-app/main/default/objects/Sprint__c/fields/Sprint_Progress__c.field-meta.xml
<CustomField>
    <fullName>Sprint_Progress__c</fullName>
    <description>Weighted average progress using Story Points</description>
    <label>Sprint Progress %</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>