force-app/main/default/objects/Sprint__c/fields/Total_Story_Points__c.field-meta.xml
<CustomField>
    <fullName>Total_Story_Points__c</fullName>
    <description>Total story points committed for this sprint</description>
    <label>Total Story Points</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>