force-app/main/default/objects/Sprint__c/fields/Velocity__c.field-meta.xml
<CustomField>
    <fullName>Velocity__c</fullName>
    <description>Sprint velocity (completed story points)</description>
    <label>Velocity</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>