force-app/main/default/objects/Sprint__c/validationRules/Cannot_Put_On_Hold_With_Active_SIT.validationRule-meta.xml
<ValidationRule>
    <fullName>Cannot_Put_On_Hold_With_Active_SIT</fullName>
    <active>true</active>
    <description>Sprint cannot be put On Hold while any of its stories are in SIT, QA, UAT, or Prod. Enforced via Apex in StatusManagementService; this rule adds a manual-edit guard.</description>
    <errorConditionFormula>AND(
    ISPICKVAL(Status__c, "On Hold"),
    ISCHANGED(Status__c),
    Sprint_Progress__c &lt; 100,
    Sprint_Progress__c &gt; 0
)</errorConditionFormula>
    <errorDisplayField>Status__c</errorDisplayField>
    <errorMessage>Sprint cannot be put On Hold while it has stories in progress. Please check that no stories are currently in SIT, QA, UAT, or Prod stages before putting the sprint On Hold.</errorMessage>
</ValidationRule>