force-app/main/default/objects/Sprint__c/validationRules/Closed_Sprint_Cannot_Be_Modified.validationRule-meta.xml
<ValidationRule>
    <fullName>Closed_Sprint_Cannot_Be_Modified</fullName>
    <active>true</active>
    <description>Prevents modification of closed sprint records</description>
    <errorConditionFormula>AND(
    ISCHANGED(Status__c) = FALSE,
    ISPICKVAL(Status__c, "Closed"),
    NOT($Permission.Modify_Closed_Sprints)
)</errorConditionFormula>
    <errorMessage>Closed sprints cannot be modified. Please contact your administrator if changes are required.</errorMessage>
</ValidationRule>