force-app/main/default/objects/Sprint__c/validationRules/End_Date_After_Start_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>End_Date_After_Start_Date</fullName>
    <active>true</active>
    <description>Ensures sprint end date is after start date</description>
    <errorConditionFormula>End_Date__c &lt;= Start_Date__c</errorConditionFormula>
    <errorDisplayField>End_Date__c</errorDisplayField>
    <errorMessage>Sprint end date must be after the start date.</errorMessage>
</ValidationRule>