force-app/main/default/objects/Sprint__c/validationRules/Progress_Cannot_Exceed_100.validationRule-meta.xml
<ValidationRule>
    <fullName>Progress_Cannot_Exceed_100</fullName>
    <active>true</active>
    <description>Ensures sprint progress percentage does not exceed 100%</description>
    <errorConditionFormula>Sprint_Progress__c &gt; 100</errorConditionFormula>
    <errorDisplayField>Sprint_Progress__c</errorDisplayField>
    <errorMessage>Sprint progress cannot exceed 100%. Please verify story progress calculations.</errorMessage>
</ValidationRule>